[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://MenuBotFight.tscn" type="PackedScene" id=2]
[ext_resource path="res://montserrat_eb_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://icons/scorched earth remastered.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]

font_path = "res://Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]

font_path = "res://Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=6]

size = 200
use_mipmaps = true
use_filter = true
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]

size = 20
use_mipmaps = true
use_filter = true
font_data = SubResource( 5 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Container" parent="."]
margin_left = 370.0
margin_top = 135.0
margin_right = 1650.0
margin_bottom = 855.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="MenuBotFight" parent="Background" instance=ExtResource( 2 )]

[node name="BackgroundOverlay" type="Container" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="leftColor" type="ColorRect" parent="BackgroundOverlay"]
margin_right = 370.0
margin_bottom = 720.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="topColor" type="ColorRect" parent="BackgroundOverlay"]
margin_left = 370.0
margin_right = 1280.0
margin_bottom = 135.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="bottomColor" type="ColorRect" parent="BackgroundOverlay"]
margin_left = 370.0
margin_top = 639.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="rightColor" type="ColorRect" parent="BackgroundOverlay"]
margin_left = 1266.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="new_game" type="Button" parent="."]
margin_left = 50.0
margin_top = 440.0
margin_right = 330.0
margin_bottom = 518.009
custom_fonts/font = ExtResource( 3 )
text = "new game"

[node name="start_new_game" type="Button" parent="."]
visible = false
margin_left = 50.0
margin_top = 550.0
margin_right = 330.0
margin_bottom = 628.01
custom_fonts/font = ExtResource( 3 )
text = "Start!"

[node name="load_game" type="Button" parent="."]
margin_left = 50.0
margin_top = 550.0
margin_right = 330.0
margin_bottom = 637.009
custom_fonts/font = ExtResource( 3 )
text = "load game"

[node name="player_amount_label" type="Label" parent="."]
visible = false
margin_left = 51.194
margin_top = 451.393
margin_right = 287.194
margin_bottom = 503.393
custom_fonts/font = ExtResource( 3 )
text = "2 players"
align = 2

[node name="amount_up" type="Button" parent="."]
visible = false
margin_left = 299.063
margin_top = 445.921
margin_right = 342.063
margin_bottom = 503.931
rect_scale = Vector2( 0.7, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "^"
align = 0

[node name="amount_down" type="Button" parent="."]
visible = false
margin_left = 328.63
margin_top = 513.112
margin_right = 371.63
margin_bottom = 571.121
rect_rotation = 180.0
rect_scale = Vector2( 0.7, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "^"

[node name="controls" type="Button" parent="."]
margin_left = 998.701
margin_top = 43.7177
margin_right = 1239.7
margin_bottom = 94.7177
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="controlsContainer" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="ColorRect" type="ColorRect" parent="controlsContainer"]
margin_left = 37.4783
margin_top = 37.4783
margin_right = 1253.48
margin_bottom = 685.478
color = Color( 0.105882, 0.109804, 0.176471, 1 )

[node name="Label" type="Label" parent="controlsContainer"]
margin_left = 530.0
margin_top = 90.0
margin_right = 942.0
margin_bottom = 617.0
custom_fonts/font = SubResource( 4 )
text = "
- angle up
- angle down
- adjust angle
- power up
- power down 
- move left
- move right
- shoot
- change weapon"

[node name="Label2" type="Label" parent="controlsContainer"]
margin_left = 200.0
margin_top = 90.0
margin_right = 519.0
margin_bottom = 617.0
custom_fonts/font = SubResource( 4 )
text = "Controls:
left arrow
right arrow
left mouse
up arrow
down arrow
a
d
enter
tab"
align = 2

[node name="Close" type="Button" parent="controlsContainer"]
margin_left = 991.614
margin_top = 619.629
margin_right = 1232.61
margin_bottom = 670.629
custom_fonts/font = SubResource( 2 )
text = "Close"

[node name="yeet" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="yeet"]
margin_left = 87.1516
margin_top = 68.9494
margin_right = 1184.15
margin_bottom = 629.949
color = Color( 0.8, 0.364706, 0.721569, 1 )

[node name="Label" type="Label" parent="yeet"]
margin_left = 293.505
margin_top = 209.545
margin_right = 948.505
margin_bottom = 454.545
custom_fonts/font = SubResource( 6 )
text = "yeet"
align = 1
valign = 1

[node name="Button" type="Button" parent="yeet"]
margin_left = 1071.0
margin_top = 572.0
margin_right = 1176.0
margin_bottom = 622.0
custom_fonts/font = SubResource( 7 )
text = "go back"

[node name="Title" type="Sprite" parent="."]
position = Vector2( 788.363, 205.419 )
scale = Vector2( 1.5, 1.7 )
texture = ExtResource( 4 )

[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="start_new_game" to="." method="_on_start_new_game_pressed"]
[connection signal="pressed" from="load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="amount_up" to="." method="_on_amount_up_pressed"]
[connection signal="pressed" from="amount_down" to="." method="_on_amount_down_pressed"]
[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="controlsContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="yeet/Button" to="." method="_on_Button_pressed"]
